--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -14,7 +14,7 @@ select = A,B,C,D,E,F,M,N,S,T,W,B950
 ignore = E203,E501,W503,D107,D202,D401
 
 # tests use assert
-per-file-ignores = src/{{ cookiecutter.project_slug }}/tests/*:S101  
+per-file-ignores = tests/*:S101  
 
 # docstring convention
 docstring-convention = google
