--- a/{{ cookiecutter.project_name }}/envs/dev.yml
+++ b/{{ cookiecutter.project_name }}/envs/dev.yml
@@ -3,19 +3,20 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python>=3
-  - ipython
-  - pytest
-  - pytest-cov
   - black
-  - rope
   - flake8
   - flake8-builtins
   - flake8-mutable
   - flake8-docstrings
+  - ipython
   - pep8-naming
-  - pre-commit
   - pip
+  - pre-commit
+  - python>=3
+  - pytest
+  - pytest-cov
+  - rope
+  - twine
   - pip:
       - flake8-bandit
       - flake8-bugbear
