--- a/{{ cookiecutter.project_name }}/.github/actions/test.yml
+++ b/{{ cookiecutter.project_name }}/.github/actions/test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test:
-    name: ${{ matrix.python-version }} on ${{ matrix.os }}
+    name: ${% raw %}{{ matrix.python-version }}{% endraw %} on {% raw %}${{ matrix.os }}{% endraw %}
     strategy:
       matrix:
         python-version:
@@ -15,14 +15,14 @@ jobs:
           - ubuntu-latest
           - windows-latest
           - macOS-latest
-    runs-on: ${{ matrix.os }}
+    runs-on: ${% raw %}{{ matrix.os }}{% endraw %}
     steps:
       - name: Checkout source
         uses: actions/checkout@master
       - name: Set up Python
         uses: actions/setup-python@master
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${% raw %}{{ matrix.python-version }}{% endraw %}
       - name: Update pip
         run: pip install --upgrade pip
       - name: Install dependencies
