--- a/{{ cookiecutter.project_name }}/pytest.ini
+++ b/{{ cookiecutter.project_name }}/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -v --junitxml=reports/junit.xml --doctest-modules --cov-report=term-missing --cov-report=html:reports/htmlcov --cov-report=term --cov=src/gannet --cov-config=.coveragerc
+addopts = -v --junitxml=reports/junit.xml --doctest-modules --cov-report=term-missing --cov-report=html:reports/htmlcov --cov-report=term --cov=src/{{ cookiecutter.project_slug }} --cov-config=.coveragerc
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
-testpaths = src/gannet
+testpaths = src/{{ cookiecutter.project_slug }}
