--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -3,7 +3,7 @@
 max-line-length = 88
 
 # select most codes
-select = A,B,C,D,E,F,M,N,S,T,W,B950
+select = A,B,C,D,E,F,M,N,S,T,W,B950,BLK
 
 # E203: disable warning for whitespace before ':' (black compat)
 # E501: disable 79 character line limit (black compat)
@@ -20,4 +20,9 @@ per-file-ignores = tests/*:S101
 docstring-convention = google
 
 # mccabe complexity
-max-complexity = 7
+max-complexity = 10
+
+# output summary statistics
+count = true
+statistics = true
+show-source = true
