--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -1,4 +1,7 @@
 [flake8]
+# ignore versioneer files
+exclude = versioneer.py,src/test_pyproject/_version.py
+
 # work with black
 max-line-length = 88
 
@@ -26,3 +29,10 @@ max-complexity = 10
 count = true
 statistics = true
 show-source = true
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/{{ cookiecutter.project_slug }}/_version.py
+versionfile_build = {{ cookiecutter.project_slug }}/_version.py
+tag_prefix = 
