--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -30,6 +30,11 @@ count = true
 statistics = true
 show-source = true
 
+[pytest]
+addopts = -v --junitxml=reports/junit.xml --doctest-modules --cov-report=term-missing --cov-report=html:reports/htmlcov --cov=src/{{ cookiecutter.project_slug }} --cov-config=.coveragerc
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
+testpaths = src/{{ cookiecutter.project_slug }}
+
 [versioneer]
 VCS = git
 style = pep440
