fix(recipe): fix typo in conda recipe

--- a/{{ cookiecutter.project_name }}/conda-recipe/meta.yaml
+++ b/{{ cookiecutter.project_name }}/conda-recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - pytest-cov
 
 about:
-  home: {% raw %}}{{ data["url"] }}{% endraw %}
+  home: {% raw %}{{ data["url"] }}{% endraw %}
   license: {% raw %}{{ data["license"] }}{% endraw %}
   license_file: LICENSE
   summary: {% raw %}{{ data["description"] }}{% endraw %}
