fix(pytest): fix pytest config

--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 # ignore versioneer files
-exclude = versioneer.py,src/test_pyproject/_version.py
+exclude = versioneer.py,src/{{ cookiecutter.project_slug }}/_version.py
 
 # work with black
 max-line-length = 88
@@ -30,7 +30,7 @@ count = true
 statistics = true
 show-source = true
 
-[pytest]
+[tool.pytest]
 addopts = -v --junitxml=reports/junit.xml --doctest-modules --cov-report=term-missing --cov-report=html:reports/htmlcov --cov=src/{{ cookiecutter.project_slug }} --cov-config=.coveragerc
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
 testpaths = src/{{ cookiecutter.project_slug }}
@@ -41,3 +41,4 @@ style = pep440
 versionfile_source = src/{{ cookiecutter.project_slug }}/_version.py
 versionfile_build = {{ cookiecutter.project_slug }}/_version.py
 tag_prefix = 
+parentdir_prefix = {{ cookiecutter.project_name }}-
