--- a/{{ cookiecutter.project_name }}/.github/workflows/ci.yml
+++ b/{{ cookiecutter.project_name }}/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v1
       - name: Set up Python
-        uses: actions/setup-python@1
+        uses: actions/setup-python@v1
         with:
           python-version: 3.7
       - name: Update pip
