--- a/{{ cookiecutter.project_name }}/conda-recipe/meta.yaml
+++ b/{{ cookiecutter.project_name }}/conda-recipe/meta.yaml
@@ -8,7 +8,7 @@ source:
   path: ../
 
 build:
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {% raw %}{{ PYTHON }}{% endraw %} -m pip install . -vv
 
 requirements:
   host:
