fix: add build to flake8 ignore list
So we don't lint build arguments.

--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 # ignore versioneer files
-exclude = versioneer.py,src/{{ cookiecutter.project_slug }}/_version.py
+exclude = build/,versioneer.py,src/{{ cookiecutter.project_slug }}/_version.py
 
 # work with black
 max-line-length = 88
