--- a/{{ cookiecutter.project_name }}/environment.yml
+++ b/{{ cookiecutter.project_name }}/environment.yml
@@ -1,7 +1,6 @@
-name: {{ cookiecutter.project_name }}-dev
 channels:
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
   - black==19.3b0
   - flake8==3.7.9
@@ -11,18 +10,22 @@ dependencies:
   - flake8-docstrings==1.5.0
   - flake8-mutable==1.2.0
   - flake8-pep3101==1.3.0
-  - flake8-quotes==2.1.0
+  - flake8-quotes==2.1.1
   - flake8-self==0.2.2
   - ipython==7.11.1
-  - pep8-naming
-  - pip
+  - invoke==1.3.0
+  - pep8-naming==0.8.2
+  - pip==20.0.2
   - pip:
       - flake8-bandit==2.1.2
       - flake8-bugbear==20.1.2
       - flake8-debugger==3.2.1
       - flake8-logging-format==0.6.0
       - flake8-print==3.1.4
-  - pre-commit==1.21.0
-  - rope==1.21.0
+      - reorder-python-imports==1.9.0
+  - pre-commit==2.0.1
+  - pytest==5.3.4
+  - pytest-cov==2.8.1
+  - python==3.7.5
+  - rope==0.16.0
   - twine==3.1.1
-
