--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -23,20 +23,29 @@ repos:
       stages:
         - commit
 - repo: https://github.com/pycqa/flake8
-  rev: 3.7.8
+  rev: 3.7.9
   hooks:
     - id: flake8
       stages:
         - commit
       additional_dependencies:
-        - flake8-bandit
-        - flake8-bugbear
-        - flake8-docstrings
-        - flake8-print
-        - flake8-mutable
-        - pep8-naming
+        - flake8-bandit==2.1.2
+        - flake8-blind-except==0.1.1
+        - flake8-bugbear==20.1.2
+        - flake8-builtins==1.4.2
+        - flake8-copyright==0.2.2
+        - flake8-debugger==3.2.1
+        - flake8-docstrings==1.5.0
+        - flake8-mutable==1.2.0
+        - flake8-pep3101==1.3.0
+        - flake8-quotes==2.1.1
+        - flake8-logging-format==0.6.0
+        - flake8-print==3.1.4
+        - flake8-self==0.2.2
+        - pep8-naming==0.9.1
+
 - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
-  rev: 2.0.0
+  rev: v2.2.0
   hooks:
     - id: commitlint
       additional_dependencies:
