--- a/{{ cookiecutter.project_name }}/pytest.ini
+++ b/{{ cookiecutter.project_name }}/pytest.ini
@@ -9,3 +9,6 @@ addopts =
     --cov-config=.coveragerc
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
 testpaths = src/ tests
+
+markers =
+    srconly: mark tests as requiring to be run as source
