--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 # ignore versioneer files
-exclude = build/,versioneer.py,src/{{ cookiecutter.project_slug }}/_version.py
+exclude = build/,dist/,versioneer.py,src/{{ cookiecutter.project_slug }}/_version.py
 
 # work with black
 max-line-length = 88
@@ -17,7 +17,9 @@ select = A,B,C,D,E,F,M,N,S,T,W,B950,BLK
 ignore = E203,E501,W503,D107,D202,D401
 
 # tests use assert
-per-file-ignores = tests/*:S101  
+per-file-ignores =
+    tests/*:S101  
+    tasks.py:T001
 
 # docstring convention
 docstring-convention = google
