--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-default_language_version: 
+default_language_version:
   python: python3.7
 repos:
 - repo: https://github.com/asottile/pyupgrade
@@ -17,7 +17,7 @@ repos:
   rev: 19.3b0
   hooks:
     - id: black
-      args: 
+      args:
         - --safe
         - --quiet
       stages:
@@ -29,6 +29,7 @@ repos:
       stages:
         - commit
       additional_dependencies:
+        - flake8-2020==1.5.0
         - flake8-bandit==2.1.2
         - flake8-blind-except==0.1.1
         - flake8-bugbear==20.1.2
@@ -42,6 +43,7 @@ repos:
         - flake8-logging-format==0.6.0
         - flake8-print==3.1.4
         - flake8-self==0.2.2
+        - flake8-typing-imports==1.5.1
         - pep8-naming==0.9.1
 
 - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
