--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -10,7 +10,7 @@ select = A,B,C,D,E,F,M,N,S,T,W,B950,BLK
 
 # E203: disable warning for whitespace before ':' (black compat)
 # E501: disable 79 character line limit (black compat)
-# W503: line breaks before/after binary operator (black compat) 
+# W503: line breaks before/after binary operator (black compat)
 # D202: empty lines around function docstrings
 # D107: no __init__ docstring requirement (document in clas docstring instead)
 # D401: imperative mood check does not work for properties
@@ -18,7 +18,7 @@ ignore = E203,E501,W503,D107,D202,D401
 
 # tests use assert
 per-file-ignores =
-    tests/*:S101  
+    tests/*:S101
     tasks.py:T001
 
 # docstring convention
@@ -37,5 +37,5 @@ VCS = git
 style = pep440
 versionfile_source = src/{{ cookiecutter.project_slug }}/_version.py
 versionfile_build = {{ cookiecutter.project_slug }}/_version.py
-tag_prefix = 
+tag_prefix = v
 parentdir_prefix = {{ cookiecutter.project_name }}-
