--- a/{{ cookiecutter.project_name }}/.gitlab-ci.yml
+++ b/{{ cookiecutter.project_name }}/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
   script:
     - conda info
     - conda install conda-build conda-verify
-    - conda build .
+    - conda build --output-folder dist/conda/ .
   artifacts:
     paths:
       - dist/conda/noarch/*.tar.bz2
