--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -34,6 +34,7 @@ repos:
         - flake8-blind-except==0.1.1
         - flake8-bugbear==20.1.2
         - flake8-builtins==1.4.2
+        - flake8-coding==1.3.2
         - flake8-copyright==0.2.2
         - flake8-debugger==3.2.1
         - flake8-docstrings==1.5.0
@@ -45,7 +46,13 @@ repos:
         - flake8-self==0.2.2
         - flake8-typing-imports==1.5.1
         - pep8-naming==0.9.1
-
+- repo: local
+  hooks:
+    - id: dockerlint
+      name: dockerlint
+      language: docker_image
+      entry: hadolint/hadolint hadolint
+      files: Dockerfile
 - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
   rev: v2.2.0
   hooks:
