--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -31,6 +31,7 @@ repos:
       additional_dependencies:
         - flake8-2020==1.5.0
         - flake8-bandit==2.1.2
+        - flake8-breakpoint==1.1.0
         - flake8-blind-except==0.1.1
         - flake8-bugbear==20.1.2
         - flake8-builtins==1.4.2
