--- a/{{ cookiecutter.project_name }}/env.yml
+++ b/{{ cookiecutter.project_name }}/env.yml
@@ -20,6 +20,7 @@ dependencies:
       - flake8-2020==1.5.0
       - flake8-bandit==2.1.2
       - flake8-bugbear==20.1.2
+      - flake8-breakpoint==1.1.0
       - flake8-coding==1.3.2
       - flake8-debugger==3.2.1
       - flake8-logging-format==0.6.0
