feat: add flake8-pytest-style

--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -6,7 +6,7 @@ exclude = build/,dist/,versioneer.py,src/{{ cookiecutter.project_slug }}/_versio
 max-line-length = 88
 
 # select most codes
-select = A,B,C,D,E,F,M,N,S,T,W,B950,BLK
+select = A,B,C,D,E,F,M,N,S,T,W,B950,BLK,PT
 
 # E203: disable warning for whitespace before ':' (black compat)
 # E501: disable 79 character line limit (black compat)
