--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
         - flake8-quotes==2.1.1
         - flake8-logging-format==0.6.0
         - flake8-print==3.1.4
+        - flake8-pytest==0.1.3
         - flake8-self==0.2.2
         - flake8-typing-imports==1.5.1
         - pep8-naming==0.9.1
