--- a/{{ cookiecutter.project_name }}/env.yml
+++ b/{{ cookiecutter.project_name }}/env.yml
@@ -25,6 +25,7 @@ dependencies:
       - flake8-debugger==3.2.1
       - flake8-logging-format==0.6.0
       - flake8-print==3.1.4
+      - flake8-pytest==0.1.3
       - flake8-typing-imports==1.5.1
       - reorder-python-imports==1.9.0
       - jinja2-cli==0.7.0
