--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -29,13 +29,14 @@ repos:
       stages:
         - commit
       additional_dependencies:
+        - cohesion==1.0.0
         - flake8-2020==1.5.0
         - flake8-bandit==2.1.2
-        - flake8-breakpoint==1.1.0
         - flake8-blind-except==0.1.1
         - flake8-bugbear==20.1.2
         - flake8-builtins==1.4.2
         - flake8-coding==1.3.2
+        - flake8-comprehensions==3.2.2
         - flake8-copyright==0.2.2
         - flake8-debugger==3.2.1
         - flake8-docstrings==1.5.0
