--- a/{{ cookiecutter.project_name }}/env.yml
+++ b/{{ cookiecutter.project_name }}/env.yml
@@ -6,6 +6,7 @@ dependencies:
   - flake8==3.7.9
   - flake8-blind-except==0.1.1
   - flake8-builtins==1.4.2
+  - flake8-comprehensions==3.2.2
   - flake8-copyright==0.2.2
   - flake8-docstrings==1.5.0
   - flake8-mutable==1.2.0
@@ -17,10 +18,10 @@ dependencies:
   - pep8-naming==0.8.2
   - pip==20.0.2
   - pip:
+      - cohesion==1.0.0
       - flake8-2020==1.5.0
       - flake8-bandit==2.1.2
       - flake8-bugbear==20.1.2
-      - flake8-breakpoint==1.1.0
       - flake8-coding==1.3.2
       - flake8-debugger==3.2.1
       - flake8-logging-format==0.6.0
