fix: protect metajinja with raw to conda-recipe

--- a/{{ cookiecutter.project_name }}/conda-recipe/meta.yaml
+++ b/{{ cookiecutter.project_name }}/conda-recipe/meta.yaml
@@ -18,9 +18,9 @@ requirements:
     - pip
 
   run:
-  {% for package in resolved_packages("host") %}
+  {% raw %}{% for package in resolved_packages("host") %}
     - {{ package }}
-  {% endfor %}
+  {% endfor %}{% endraw %}
 
 test:
   commands:
