--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -7,12 +7,12 @@ repos:
       - id: pyupgrade
         stages:
           - commit
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v1.6.1
+  - repo: https://github.com/timothycrosley/isort
+    rev: 4.3.21-2
     hooks:
-    - id: reorder-python-imports
-      stages:
-      - commit
+      - id: isort
+        stages:
+          - commit
   - repo: https://github.com/psf/black
     rev: 19.3b0
     hooks:
@@ -31,24 +31,13 @@ repos:
         additional_dependencies:
           - cohesion==1.0.0
           - flake8-2020==1.5.0
-          - flake8-bandit==2.1.2
           - flake8-blind-except==0.1.1
-          - flake8-bugbear==20.1.2
-          - flake8-builtins==1.4.2
-          - flake8-coding==1.3.2
-          - flake8-comprehensions==3.2.2
           - flake8-copyright==0.2.2
-          - flake8-debugger==3.2.1
-          - flake8-docstrings==1.5.0
-          - flake8-mutable==1.2.0
-          - flake8-pep3101==1.3.0
-          - flake8-quotes==2.1.1
-          - flake8-logging-format==0.6.0
-          - flake8-print==3.1.4
-          - flake8-pytest==0.1.3
-          - flake8-self==0.2.2
-          - flake8-typing-imports==1.5.1
-          - pep8-naming==0.9.1
+          - wemake-python-styleguide==0.13.4
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.761
+    hooks:
+      - id: mypy
   - repo: local
     hooks:
       - id: dockerlint
