--- a/{{ cookiecutter.project_name }}/env.dev.yml
+++ b/{{ cookiecutter.project_name }}/env.dev.yml
@@ -5,30 +5,14 @@ dependencies:
   - black==19.3b0
   - flake8==3.7.9
   - flake8-blind-except==0.1.1
-  - flake8-bugbear==20.1.4
-  - flake8-builtins==1.4.2
-  - flake8-comprehensions==3.2.2
   - flake8-copyright==0.2.2
-  - flake8-docstrings==1.5.0
-  - flake8-mutable==1.2.0
-  - flake8-pep3101==1.3.0
-  - flake8-print==3.1.4
-  - flake8-quotes==2.1.1
-  - flake8-self==0.2.2
   - ipython==7.11.1
+  - isort==4.3.21-2
   - invoke==1.3.0
-  - pep8-naming==0.8.2
   - pip==20.0.2
   - pip:
       - cohesion==1.0.0
       - flake8-2020==1.5.0
-      - flake8-bandit==2.1.2
-      - flake8-coding==1.3.2
-      - flake8-debugger==3.2.1
-      - flake8-logging-format==0.6.0
-      - flake8-pytest==0.1.3
-      - flake8-typing-imports==1.5.1
-      - reorder-python-imports==1.9.0
       - jinja2-cli==0.7.0
   - pre-commit==2.0.1
   - pytest==5.3.4
