feat: fix weird escape problem in pyproject

--- a/{{ cookiecutter.project_name }}/pyproject.toml
+++ b/{{ cookiecutter.project_name }}/pyproject.toml
@@ -20,7 +20,7 @@ exclude_lines = [
   "if self.debug",
   "raise AssertionError",
   "raise NotImplementedError",
-  "if logger\.isEnabledFor",
+  "if logger.isEnabledFor",
   "if __name__ == [\"']__main__[\"']:" # no module excecutable code
 ]
 
