style: make compatible with wemake
Signed-off-by: Rich Lewis <2941720+lewisacidic@users.noreply.github.com>

--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -2,37 +2,56 @@
 # ignore versioneer files
 exclude = build/,dist/,versioneer.py,src/{{ cookiecutter.project_slug }}/_version.py
 
-# work with black
-max-line-length = 88
+max-line-length = 80
 
 # select most codes
 select = A,B,C,D,E,F,M,N,S,T,W,B950,PT
 
+# C812,3: trailing comma (black compat)
+# D202: empty lines around function docstrings
+# D107: no __init__ docstring requirement (document in class docstring instead)
+# D401: imperative mood check does not work for properties
 # E203: disable warning for whitespace before ':' (black compat)
 # E501: disable 79 character line limit (black compat)
 # W503: line breaks before/after binary operator (black compat)
-# D202: empty lines around function docstrings
-# D107: no __init__ docstring requirement (document in clas docstring instead)
-# D401: imperative mood check does not work for properties
-ignore = E203,E501,W503,D107,D202,D401
+# WPS226: we like to use the same string many places
+# WPS300: allow local folder import
+# WPS305: allow f strings
+# WPS410: allow __all__
+ignore = C812,C813,D107,D202,D401,E203,E501,W503,WPS226,WPS300,WPS305,WPS410
 
-# tests use assert
 per-file-ignores =
-    tests/*:S101
-    tasks.py:T001
+    # WPS412: we need to set __all__ in __init__
+    src/{{ cookiecutter.project_slug }}/__init__.py:WPS412
+    # WPS101: about is a magic name
+    src/{{ cookiecutter.project_slug }}/__about__.py:WPS101
+    # S101: pytest uses raw assert
+    # WPS442: pytest fixtures use shadowing
+    tests/*:S101,WPS442
+    # WPS211: tasks provide more arguments
+    # WPS231: we should use complex functions in tasks
+    # WPS421: we should use print in tasks
+    tasks.py:WPS211,WPS231,WPS421
+
+allowed-domain-names = value
 
 # docstring convention
 docstring-convention = google
 
 # mccabe complexity
-max-complexity = 10
+max-complexity = 9
+
+# try body length
+max-try-body-length = 3
 
 # output summary statistics
 count = true
 statistics = true
 show-source = true
+format = wemake
 
-no-accept-encodings=true
+[darglint]
+strictness=short
 
 [versioneer]
 VCS = git
