--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -13,6 +13,8 @@ repos:
       - id: isort
         stages:
           - commit
+        additional_dependencies:
+          - toml
   - repo: https://github.com/psf/black
     rev: 19.3b0
     hooks:
@@ -33,7 +35,7 @@ repos:
           - flake8-2020==1.5.0
           - flake8-blind-except==0.1.1
           - flake8-copyright==0.2.2
-          - wemake-python-styleguide==0.13.4
+          - git+https://github.com/wemake-services/wemake-python-styleguide
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.761
     hooks:
