--- a/{{ cookiecutter.project_name }}/env.dev.yml
+++ b/{{ cookiecutter.project_name }}/env.dev.yml
@@ -14,7 +14,8 @@ dependencies:
       - cohesion==1.0.0
       - flake8-2020==1.5.0
       - jinja2-cli==0.7.0
-  - pre-commit==2.0.1
+      - git+https://github.com/wemake-services/wemake-python-styleguide
+      - pre-commit==2.0.1
   - pytest==5.3.4
   - pytest-cov==2.8.1
   - python==3.7.5
