--- a/{{ cookiecutter.project_name }}/env.dev.yml
+++ b/{{ cookiecutter.project_name }}/env.dev.yml
@@ -7,7 +7,7 @@ dependencies:
   - flake8-blind-except==0.1.1
   - flake8-copyright==0.2.2
   - ipython==7.11.1
-  - isort==4.3.21-2
+  - isort==4.3.21
   - invoke==1.3.0
   - pip==20.0.2
   - pip:
