--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -39,6 +39,8 @@ repos:
     rev: v0.761
     hooks:
       - id: mypy
+        stages:
+          - commit
   - repo: local
     hooks:
       - id: dockerlint
