refactor: move environment file

--- a/{{ cookiecutter.project_name }}/Dockerfile
+++ b/{{ cookiecutter.project_name }}/Dockerfile
@@ -5,8 +5,8 @@ LABEL maintainer="{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }
 RUN mkdir /app
 WORKDIR /app
 
-COPY env.yml .
-RUN conda env update -n base -f env.yml && conda clean --all -f -y
+COPY environment.yml .
+RUN conda env update -n base -f environment.yml && conda clean --all -f -y
 
 COPY . .
 RUN python -m pip install -e. --no-deps --ignore-installed
