--- a/{{ cookiecutter.project_name }}/env.dev.yml
+++ b/{{ cookiecutter.project_name }}/env.dev.yml
@@ -13,7 +13,7 @@ dependencies:
       - cohesion==1.0.0
       - flake8-2020==1.5.0
       - jinja2-cli==0.7.0
-      - git+https://github.com/wemake-services/wemake-python-styleguide
+      - wemake-python-styleguide==0.14.0
   - pre-commit==2.1.1
   - pytest==5.3.4
   - pytest-cov==2.8.1
