--- a/{{ cookiecutter.project_name }}/environment.yml
+++ b/{{ cookiecutter.project_name }}/environment.yml
@@ -4,29 +4,18 @@ channels:
 dependencies:
   - black==19.3b0
   - flake8==3.7.9
-  - flake8-blind-except==0.1.1
-  - flake8-builtins==1.4.2
   - flake8-copyright==0.2.2
-  - flake8-docstrings==1.5.0
-  - flake8-mutable==1.2.0
-  - flake8-pep3101==1.3.0
-  - flake8-quotes==2.1.1
-  - flake8-self==0.2.2
   - ipython==7.11.1
+  - isort==4.3.21
   - invoke==1.3.0
-  - pep8-naming==0.8.2
+  - mypy==0.770
   - pip==20.0.2
   - pip:
+      - cohesion==1.0.0
       - flake8-2020==1.5.0
-      - flake8-bandit==2.1.2
-      - flake8-bugbear==20.1.2
-      - flake8-debugger==3.2.1
-      - flake8-logging-format==0.6.0
-      - flake8-print==3.1.4
-      - flake8-typing-imports==1.5.1
-      - reorder-python-imports==1.9.0
       - jinja2-cli==0.7.0
-  - pre-commit==2.0.1
+      - wemake-python-styleguide==0.14.0
+  - pre-commit==2.1.1
   - pytest==5.3.4
   - pytest-cov==2.8.1
   - python==3.7.5
